# SignalStack

./: .gitignore  CODE_FLOW.md  README.md
financial-data-platform/: .env.example  README.md  docker-compose.yml  pyproject.toml
financial-data-platform/.tmp_dagster_home_3qxi7aql/history/: runs.db
financial-data-platform/.tmp_dagster_home_3qxi7aql/history/runs/: .db  a7dd7268-b196-44d3-9c08-508ced9eb543.db  index.db
financial-data-platform/.tmp_dagster_home_3qxi7aql/schedules/: schedules.db
financial-data-platform/.tmp_dagster_home_3qxi7aql/storage/: bronze_customer_accounts  bronze_monthly_summaries  bronze_risk_flags  bronze_transactions  gold_analytics_monthly  gold_risk_features  silver_customer_accounts  silver_monthly_summaries  silver_risk_flags  silver_transactions
financial-data-platform/.tmp_dagster_home_3qxi7aql/storage/a7dd7268-b196-44d3-9c08-508ced9eb543/compute_logs/: bkgkyafx.err  bpkhxsms.err  iflwkihl.err  jitcnjlc.err  klqdobsf.err  ngtqihqp.err  sduhgtbo.err  sqncrkdq.err  ubmhbezs.err  yxpgpsgl.err  zdztvlzj.err  zqquucge.err
financial-data-platform/connectors/: README.md  pyproject.toml
financial-data-platform/connectors/connectors/: __init__.py  base.py  config.py  oracle_connector.py  postgres_connector.py
financial-data-platform/pipeline/: README.md  dagster.yaml  pyproject.toml  workspace.yaml
financial-data-platform/pipeline/pipeline/: __init__.py  project_env.py
financial-data-platform/pipeline/pipeline/assets/: __init__.py  bronze.py  gold.py  silver.py
financial-data-platform/pipeline/pipeline/config/: __init__.py  client_config.py
financial-data-platform/pipeline/pipeline/config/clients/: client_a.yaml
financial-data-platform/pipeline/pipeline/resources/: __init__.py  db_resources.py
financial-data-platform/pipeline/pipeline/schedules/: __init__.py  daily_schedule.py
financial-data-platform/pipeline/pipeline/sensors/: __init__.py  change_sensor.py
financial-data-platform/pipeline/pipeline/utils/: __init__.py  hashing.py
financial-data-platform/pipeline/tests/: __init__.py  conftest.py  test_bronze.py  test_connectors.py  test_hashing.py  test_silver.py
financial-data-platform/seed_data/: financial_data.sqlite  generate_sqlite.py
