[tool.poetry]
name = "financial-data-platform"
version = "1.0.0"
description = "Local Bronze/Silver/Gold financial data platform orchestrated with Dagster."
authors = ["Financial Data Platform Team <data@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
connectors = {path = "connectors", develop = true}
financial-pipeline = {path = "pipeline", develop = true}
dagster = "^1.8.13"
dagster-webserver = "^1.8.13"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
pyyaml = "^6.0.2"
faker = "^26.3.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
pythonpath = ["connectors", "pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
